# effectivepython2

./: .dockerignore  .gitignore  Dockerfile  Makefile  logconf.ini  pyproject.toml
.devcontainer/: devcontainer.json
effective_python/: function.py  list_and_dict.py  main.py  pythonic_thinking.py  test.py
effective_python_2nd_edition/effective_python/: class_and_inheritance.py  endnotes_and_generators.py  function.py  list_and_dict.py  main.py
effective_python_2nd_edition/tests/: test_class_and_inheritance.py  test_endnotes_and_generators.py  test_funciton.py  test_pythonic_thinking.py
tests/: test_funciton.py  test_list_and_dict.py  test_pythonic_thinking.py
