[tool.poetry]
name = "effective-python"
version = "0.1.0"
description = ""
authors = ["Yuki Yamada <yamada.yuki@enechain.co.jp>"]
readme = "README.md"
packages = [{include = "effective_python"}]

[tool.poetry.dependencies]
python = "3.11.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[flake8]
extend-ignore = "E203"
max-line-length = 119

[tool.isort]
profile = "black"
line_length = 119