[tool.poetry]
name = "effective-python"
version = "0.1.0"
description = ""
authors = ["Yuki Yamada <yamada.yuki@enechain.co.jp>"]
readme = "README.md"
packages = [{include = "effective_python"}]

[tool.poetry.dependencies]
python = "^3.11.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"
flake8-isort = "^6.0.0"
flake8-bugbear = "^23.1.20"
flake8-builtins = "^2.1.0"
flake8-unused-arguments = "^0.0.13"
flake8-pytest-style = "^1.6.0"
pep8-naming = "^0.13.3"
mypy = "^0.991"
black = "^23.1.0"
isort = "^5.12.0"

[tool.pytest.ini_options]
log_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[flake8]
extend-ignore = "E203"
max-line-length = 119

[tool.isort]
profile = "black"
line_length = 119